--- a/style.css
+++ b/style.css
@@ -308,7 +308,7 @@ body {
     background-color: rgba(255, 69, 58, 0.1);
     border-radius: 15px;
     margin-bottom: 20px;
-    font-size: 1.2em;
+    font-size: 18px;
     color: #333;
     display: flex;
     align-items: center;
@@ -320,7 +320,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 50%;
+    width: 300px;
 }
 
 .button3 {
@@ -334,7 +334,8 @@ body {
     display: flex;
     text-align: center;
     align-items: center;
-    font-size: 1.2em;
+    justify-content: center;
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -349,7 +350,9 @@ body {
 }
 
 
-
+.imgpag3{
+    width: 40%;
+}
 
 
 
