--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     background-color: #F6F6F6;
     margin: 0;
     padding: 0;
-    
+
 }
 
 .header {
@@ -19,13 +19,13 @@ body {
     width: 100%;
     height: 80px;
     z-index: 1000;
-   background-color: white;
+    background-color: white;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
     transition: top 0.3s ease;
 }
 
 .header.visivel {
-    top: -100px; 
+    top: -100px;
 }
 
 .header nav {
@@ -50,7 +50,7 @@ body {
     font-size: 20px;
     cursor: pointer;
     border-radius: 5px;
-     display: flex;
+    display: flex;
     justify-content: center;
     text-align: center;
     align-items: center;
@@ -61,7 +61,7 @@ body {
     background-color: #870000;
 }
 
-.mudarposição{
+.mudarposição {
     margin: 0px 200px;
     margin-top: 10px;
 }
@@ -72,7 +72,7 @@ body {
     display: flex;
     align-items: center;
     padding: 40px;
-    margin-top: 15px; 
+    margin-top: 15px;
     width: 100%;
 }
 
@@ -122,14 +122,14 @@ body {
 
 .disponivel-em {
     display: flex;
-    align-items: center; 
-   color: #414141;
-    font-size: 26px; 
+    align-items: center;
+    color: #414141;
+    font-size: 26px;
 }
 
 .icons {
-    margin-left: 5px; 
-    align-items: center; 
+    margin-left: 5px;
+    align-items: center;
 }
 
 
@@ -159,6 +159,7 @@ body {
     opacity: 0;
     transition: opacity 0.9s ease;
 }
+
 .visivel {
     opacity: 1;
 }
@@ -169,19 +170,19 @@ body {
     height: 0;
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;
-    border-top: 25px solid #a80000;  
+    border-top: 25px solid #a80000;
     position: fixed;
-    bottom: 20px;  
+    bottom: 20px;
     left: 50%;
-    transform: translateX(-50%);  
-    z-index: 1001;  
-    opacity: 1;  
-    transition: opacity 0.3s ease;  
+    transform: translateX(-50%);
+    z-index: 1001;
+    opacity: 1;
+    transition: opacity 0.3s ease;
     animation: pulse 1.5s infinite;
 }
 
 .seta-baixo.visivel {
-    opacity: 0;  
+    opacity: 0;
 }
 
 
@@ -189,41 +190,64 @@ body {
     0% {
         transform: translateY(0);
     }
+
     50% {
         transform: translateY(10px);
     }
+
     100% {
         transform: translateY(0);
     }
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 14px;
 
 }
 
-::-webkit-scrollbar-thumb{
-    background-color:  #a80000 ;
-   
-    
-    
+::-webkit-scrollbar-thumb {
+    background-color: #a80000;
+
+
+
 }
 
-::-webkit-scrollbar-track{
-    background-color: white ;
+::-webkit-scrollbar-track {
+    background-color: white;
     width: 10px;
-    
+
 }
 
 /* PAGINA2 */
 
-.pag2  {
+.pag2 {
     margin-bottom: 0;
     margin-top: 0;
-   
+
 }
 
-.boxes {
+.boxe1 {
+
+    padding: 60px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 100px;
+    padding-right: 100px;
+    background-color: #E82C2C;
+    color: white;
+    margin: 90px;
+    margin-top: -30px;
+    border-radius: 20px;
+    text-align: center;
+    cursor: pointer;
+    transition: transform 0.2s;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+
+}
+
+
+
+.boxe2 {
     padding: 60px;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -236,9 +260,12 @@ body {
     border-radius: 20px;
     align-items: center;
     text-align: center;
+    cursor: pointer;
+    transition: transform 0.2s;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.boxe-special {
+.boxe3 {
     padding: 50px;
     padding-top: 35px;
     padding-bottom: 35px;
@@ -251,7 +278,22 @@ body {
     border-radius: 20px;
     align-items: center;
     text-align: center;
+    cursor: pointer;
+    transition: transform 0.2s;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
+}
+
+.boxe1:hover {
+    transform: scale(1.05);
+}
+
+.boxe2:hover {
+    transform: scale(1.05);
+}
+
+.boxe3:hover {
+    transform: scale(1.05);
 }
 
 .box {
@@ -260,7 +302,7 @@ body {
     margin: 60px;
     border-radius: 20px;
     background-color: #dec4c4;
-    margin-top: -30px;
+    margin-top: -100px;
     margin-left: 180px;
     margin-right: 180px;
 }
@@ -274,10 +316,12 @@ body {
 
 
 
+
+
 /* PAGINA3 */
 
 
-  
+
 
 .container3 {
     margin-top: 50px;
@@ -295,7 +339,7 @@ body {
     color: #333;
     margin-bottom: 20px;
     font-weight: bold;
-    
+
 }
 
 .highlight3 {
@@ -358,25 +402,25 @@ body {
 
 .conteudoF {
     font-family: Arial, sans-serif;
-  margin-top: 200px;
+    margin-top: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    
+
+
 }
 
 .conteudofinal {
     text-align: center;
     padding: 200px;
-    
+
 }
 
 .logo .logoF {
-    width: 120px; 
+    width: 120px;
     margin-left: 1px;
     margin-top: 20px;
-    
+
 }
 
 .textoFH1 {
@@ -418,8 +462,8 @@ body {
 /* FOROOTER */
 .conteudofinal {
     text-align: center;
-    padding: 50px 20px; 
-    margin-bottom: 30px; 
+    padding: 50px 20px;
+    margin-bottom: 30px;
 }
 
 footer {
@@ -429,7 +473,7 @@ footer {
     padding: 10px 0;
     font-size: 14px;
     width: 100%;
-    position: relative; 
+    position: relative;
     box-shadow: 0px 300px 300px 300px rgb(113, 10, 10);
 }
 
@@ -456,6 +500,3 @@ footer {
     width: 20px;
     filter: invert(100%);
 }
-
-
-
