--- a/style.css
+++ b/style.css
@@ -324,14 +324,15 @@ body {
 
 
 .container3 {
-    margin-top: 50px;
-    margin: 0 400px;
+    margin-top: 60px;
+    margin: 0 200px;
     padding: 0;
     box-sizing: border-box;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    text-align: center;
+    justify-content: center;
+    
+   
 }
 
 .texto3 {
@@ -339,6 +340,10 @@ body {
     color: #333;
     margin-bottom: 20px;
     font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 200px;
 
 }
 
@@ -347,28 +352,28 @@ body {
 }
 
 .display-area3 {
-    width: 80%;
-    height: 300px;
-    background-color: rgba(255, 69, 58, 0.1);
-    border-radius: 15px;
-    margin-bottom: 20px;
+    width: 450px;
+    height: 600px;
+    box-shadow: #a80000;
     font-size: 18px;
-    color: #333;
+   box-shadow: 4px 4px  8px 0px  red;
+   border-radius: 10px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
+    margin: 30px;
 }
+
+
 
 .button-container3 {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    width: 300px;
+    gap: 8px;
+    
 }
 
 .button3 {
     background-color: #E82C2C;
+    width: 330px;
     color: white;
     padding: 20px;
     border-radius: 10px;
@@ -376,10 +381,10 @@ body {
     transition: transform 0.2s;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
-    text-align: center;
+    text-align: left;
     align-items: center;
     justify-content: center;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: bold;
 }
 
@@ -388,15 +393,57 @@ body {
 }
 
 .button-number3 {
-    font-size: 2em;
+    font-size: 20px;
+    display: flex;;
     font-weight: bold;
-    margin-right: 10px;
+    align-items: center;
+    justify-content: center;
+    margin-right: 25px;
 }
 
 
-.imgpag3{
+.img3number{
+    width: 150%;
+    
+    
+}
+
+
+.imgpag3_3{
     width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: 100px;
+    
 }
+
+
+
+
+
+.imgpag3_2{
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: 100px;
+    
+}
+
+
+.imgpag3_1{
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-left: 100px;
+    
+}
+
 
 
 
