--- a/style.css
+++ b/style.css
@@ -353,21 +353,21 @@ body {
 }
 
 .display-area3 {
-    width: 450px;
+    width: 420px;
     height: 600px;
     box-shadow: #a80000;
     font-size: 18px;
-   box-shadow: 4px 4px  8px 0px  red;
    border-radius: 10px;
     display: flex;
     margin: 30px;
-        
-        border: none;
-        background-color: rgb(178, 0, 0);
+    border: none;
+       background-color: rgb(178, 0, 0);    
+       overflow: hidden;
+      
+
     }
 
-
-
+   
 
 .button-container3 {
     display: flex;
