--- a/style.css
+++ b/style.css
@@ -353,20 +353,24 @@ body {
 }
 
 .display-area3 {
-    width: 420px;
-    height: 600px;
+   
     box-shadow: #a80000;
     font-size: 18px;
    border-radius: 10px;
     display: flex;
     margin: 30px;
-    border: none;
-       background-color: rgb(178, 0, 0);    
-       overflow: hidden;
+   
       
 
     }
 
+    video {
+        width: 300px;
+        height: 600px;
+        border: none;
+        background-color: rgb(178, 0, 0);    
+        overflow: hidden;
+    }
    
 
 .button-container3 {
