--- a/style.css
+++ b/style.css
@@ -359,18 +359,15 @@ body {
    border-radius: 10px;
     display: flex;
     margin: 30px;
-   
-      
+    width: 800px;
+    height: 500px;
+    border: none;
+    background-color: rgb(178, 0, 0);    
+    overflow: hidden;
+    border-radius: 20px;
 
     }
 
-    video {
-        width: 300px;
-        height: 600px;
-        border: none;
-        background-color: rgb(178, 0, 0);    
-        overflow: hidden;
-    }
    
 
 .button-container3 {
@@ -399,6 +396,8 @@ body {
 
 .button3:hover {
     transform: scale(1.05);
+    background-color: rgb(180, 2, 2);
+    
 }
 
 .button-number3 {
