--- a/style.css
+++ b/style.css
@@ -354,19 +354,16 @@ body {
 
 .display-area3 {
    
-    box-shadow: #a80000;
-    font-size: 18px;
-   border-radius: 10px;
-    display: flex;
-    margin: 30px;
-    width: 800px;
-    height: 500px;
+    margin: 62px;
+    width: 90%;
+    height: 400px;
     border: none;
-    background-color: rgb(178, 0, 0);    
     overflow: hidden;
     border-radius: 20px;
 
     }
+
+    
 
    
 
