--- a/style.css
+++ b/style.css
@@ -455,7 +455,7 @@ body {
 
 .conteudoF {
     font-family: Arial, sans-serif;
-    margin-top: 200px;
+    margin-top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -519,13 +519,97 @@ body {
     background: linear-gradient(90.51deg, #FF0000 0.44%, #990000 57.02%);
     -webkit-background-clip: text;
     color: transparent;
-    margin-left: 34%;
+    margin-bottom: 30px;
 }
 
 .pag4 {
     display: flex;
+    flex-direction: column;
+    margin-top: 90px;
+}
+
+.perg {
+    padding-right: 60%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: rgb(243, 220, 220) ;
+    color: black;
+    border-radius: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 30px;
+
+}
+
+
+#perg1 {
+    padding-right: 2.5%;
+    padding-left: 10px;
+    display: flex;
+    justify-content: space-between;
+
+    &  h3 {
+            margin-right: 953px;
+        
+        }
+    }
+
+#perg2 {
+    padding-right: 2.4%;
+    padding-left: 10px;
+    display: flex;
+    justify-content: space-between;
+
+    & h3 {
+            margin-right: 787px;
+        
+    }
+}
+#perg3 {
+    padding-right: 2.4%;
+    padding-left: 10px;
+    display: flex;
+    justify-content: space-between;
+
+    & h3 {
+        margin-right: 609px;
     
 }
+}
+#perg4 {
+    padding-right: 2.4%;
+    padding-left: 10px;
+    display: flex;
+    justify-content: space-between;
+
+    & h3 {
+        margin-right: 380px;
+    
+}
+}
+#perg5 {
+    padding-right: 2.6%;
+    padding-left: 10px;
+    display: flex;
+    justify-content: space-between;
+
+    & h3 {
+        margin-right: 460px;
+    
+}
+}
+#perg6 {
+    padding-right: 2.5%;
+    padding-left: 10px;
+    display: flex;
+    justify-content: space-between;
+
+    & h3 {
+        margin-right: 475px;
+    
+}
+}
+
 
 
 /* FOOTER */
