--- a/Guardian.css
+++ b/Guardian.css
@@ -392,6 +392,11 @@ h4 {
 
 }
 
+.Icons{
+    margin-left: 90px;
+    
+}
+
 /* ==================================================
     PAGINA 4
 ================================================== */
