--- a/Guardian.css
+++ b/Guardian.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #dfdfdf;
+    background-color: #f8f6f6;
 }
 
 h1,
@@ -106,6 +106,7 @@ h4 {
 .text-section {
     flex: 1;
     max-width: 50%;
+    margin-top: -100px;
 }
 
 .text-section h2 {
@@ -259,7 +260,7 @@ h4 {
     width: 900px;
     height: 450px;
     padding-bottom: 0%;
-    margin-left: 218px;
+    margin-left: 300px;
     border-radius: 20px;
     background-color: #E82C2C;
     fill-opacity: 80%;
