--- a/Firebase/public/Guardian.css
+++ b/Firebase/public/Guardian.css
@@ -36,12 +36,11 @@ h4 {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 80px;
+    height: 90px;
     z-index: 1000;
     background-color: var(--headerwhite);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 4px 2px rgba(0, 0, 0, 0.203);
     transition: color 0.2s linear;
-
     transition: top 0.3s ease;
 }
 
@@ -63,7 +62,8 @@ h4 {
 
 .logoIcon {
     width: 100px;
-    margin-top: 7px;
+    margin-top: 18px;
+    justify-content: space-between;
     margin-left: -25px;
 }
 
@@ -75,6 +75,7 @@ h4 {
     font-style: normal;
     margin-bottom: 10px;
     margin-left: -5px;
+    margin-top: 15px;
 }
 
 .btn-baixar {
@@ -119,7 +120,7 @@ h4 {
 .text-section {
     flex: 1;
     max-width: 50%;
-    margin-top: -100px;
+    margin-top: 20px;
 }
 
 .text-section  {
@@ -137,6 +138,7 @@ h4 {
     color: var(--blacktext);
     line-height: 1.5;
     margin-bottom: 20px;
+    
 }
 
 .btn-download {
@@ -177,7 +179,7 @@ h4 {
 
 .disponivel-em {
     font-size: 19px;
-    margin-left: 40px;
+    margin-left: 3px;
 }
 
 .icon {
