--- a/Firebase/public/Guardian.css
+++ b/Firebase/public/Guardian.css
@@ -39,7 +39,7 @@ h4 {
     height: 90px;
     z-index: 1000;
     background-color: var(--headerwhite);
-    box-shadow: 4px 2px rgba(0, 0, 0, 0.203);
+    box-shadow: 4px 2px rgba(0, 0, 0, 0.11);
     transition: color 0.2s linear;
     transition: top 0.3s ease;
 }
@@ -182,11 +182,13 @@ h4 {
     margin-left: 3px;
 }
 
+
 .icon {
     margin-top: 5px;
     width: 25px;
     height: auto;
 }
+
 
 
 #icon {
@@ -351,7 +353,6 @@ h4 {
 
 
 
-
 /* ==================================================
     PAGINA 3
 ================================================== */
@@ -433,6 +434,7 @@ h4 {
 
 .texto3{
     color: var(--blacktext);
+    margin-top: 120px;
 }
 
 /* ==================================================
