--- a/Firebase/public/Guardian.css
+++ b/Firebase/public/Guardian.css
@@ -351,6 +351,31 @@ h4 {
     flex-shrink: 0;
 }
 
+.fade {
+    animation: fadeOut 0.5s forwards;
+}
+
+.fadeIn {
+    animation: fadeIn 0.5s forwards;
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 
 
 
@@ -416,27 +441,21 @@ h4 {
 }
 
 .Icons{
-    margin-left: 110px;
-    margin-top: 50px;
+    margin-left: 68px;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
     
-    
-}
-
-.video-player {
-    transition: opacity 1.2s ease-in-out;
-    opacity: 1;
-}
-
-.video-container {
-    position: relative;
-    width: 600px;
-    margin: 20px auto;
 }
 
 .texto3{
     color: var(--blacktext);
     margin-top: 120px;
 }
+
+
 
 /* ==================================================
     PAGINA 4
@@ -652,3 +671,7 @@ footer {
     color: #f39c12
  }
 
+
+
+
+ 
