--- a/Firebase/public/Guardian.css
+++ b/Firebase/public/Guardian.css
@@ -297,6 +297,7 @@ h4 {
     cursor: pointer;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    
 }
 
 .box1:hover {
@@ -308,6 +309,11 @@ h4 {
     width: 110px;
     height: auto;
     margin-top: 20px;
+}
+
+.Iconspag2{
+    margin-top: 20px;
+    color: rgb(204, 202, 202);
 }
 
 .ContentBox1 {
@@ -400,7 +406,7 @@ h4 {
 
 .button3 {
     background-color: #E82C2C;
-    width: 80%;
+    width: 70%;
     height: 80%;
     color: var(--Whitetext);
     border-radius: 10px;
@@ -410,7 +416,7 @@ h4 {
     display: flex;
     text-align: left;
     align-items: center;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: bold;
 }
 
@@ -421,8 +427,9 @@ h4 {
 .imgpag3 {
     max-width: 70px;
     max-height: auto;
-    margin-right: 40px;
+    margin-right: 30px;
     margin: 10px;
+    margin-left: 10px;
 }
 
 .button3:hover {
@@ -441,12 +448,9 @@ h4 {
 }
 
 .Icons{
-    margin-left: 68px;
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-around;
+    margin-left: 10px;
+    margin-top: 10px;
+   
     
 }
 
