--- a/Firebase/public/Guardian.css
+++ b/Firebase/public/Guardian.css
@@ -394,6 +394,7 @@ h4 {
     align-items: center;
     width: 100%;
     gap: 20px;
+    
 
 }
 
@@ -406,7 +407,7 @@ h4 {
 
 .button3 {
     background-color: #E82C2C;
-    width: 70%;
+    width: 80%;
     height: 80%;
     color: var(--Whitetext);
     border-radius: 10px;
@@ -438,7 +439,9 @@ h4 {
 }
 
 .display-area3 {
-    width: 800px;
+    width: 850px;
+   
+    background-color: #111;
     border: none;
     overflow: hidden;
     border-radius: 20px;
@@ -457,6 +460,26 @@ h4 {
 .texto3{
     color: var(--blacktext);
     margin-top: 120px;
+}
+
+.indicators {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-left: 100px;
+}
+
+.indicator {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: #ccc;
+    margin: 0 5px;
+    transition: background-color 0.3s;
+}
+
+.indicator.active {
+    background-color: red; 
 }
 
 
