--- a/Firebase/public/Guardian.css
+++ b/Firebase/public/Guardian.css
@@ -558,7 +558,103 @@ h4 {
     opacity: 1;
 }
 
+/* ==================================================
+    PAGINA DE COMENTARIOS
+================================================== */
 
+.pag-comnt {
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.pag-c h2 {
+    text-align: center;
+    font-size: 44px;
+    margin-top: 30px;
+    color: #c00404;
+
+}
+
+.carousel-container {
+    position: relative;
+    width: 1000px;
+}
+
+.carousel-wrapper {
+    overflow: hidden;
+    border-radius: 10px;
+    margin-bottom: -100px;
+}
+
+.carousel {
+    display: flex;
+    transition: transform 0.4s ease-in-out;
+    gap: 20px;
+}
+
+.comment {
+    flex: 0 0 30%;
+    background: #ffffff;
+    color: var(--blacktext);
+    border-radius: 15px;
+    text-align: center;
+    margin: 30px;
+    padding: 30px;
+    width: 300px;
+    height: 500px;
+    box-sizing: border-box;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.comment.center {
+    transform: scale(1.1);
+    background-color: #E82C2C;
+    
+    
+}
+
+.profile-pic {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+
+.username {
+    font-size: 18px;
+    color: #000;
+    margin: 5px 0;
+    margin-top: 20px;
+}
+
+.comment-text {
+    font-size: 14px;
+    color: #333;
+}
+
+.arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    font-size: 40px;
+    cursor: pointer;
+    color: #ff0000;
+    z-index: 10;
+}
+
+.arrow.left {
+    left: -40px;
+    font-size: 40px;
+}
+
+.arrow.right {
+    right: -40px;
+    font-size: 40px;
+}
 /* ==================================================
     PAGINA FINAL
 ================================================== */
@@ -666,7 +762,7 @@ footer {
  }
 
  .label {
-    background-color: #111;
+    background-color: #000000;
     border-radius: 50px;
     cursor: pointer;
     display: flex;
@@ -681,7 +777,7 @@ footer {
  }
 
  .label .ball{
-    background-color: #fff;
+    background-color: #ffffff;
     border-radius: 50%;
     position: absolute;
     top: 2px;
@@ -698,11 +794,11 @@ footer {
  }
 
  .fa-moon{
-    color: #f1c40f;
+    color: #f7d457;
  }
 
  .fa-sun{
-    color: #f39c12
+    color: #f7d457;
  }
 
 
