--- a/Firebase/public/Guardian.css
+++ b/Firebase/public/Guardian.css
@@ -627,7 +627,6 @@ h4 {
     transform: scale(1.1);
     background-color: #E82C2C;
     
-    
 }
 
 .profile-pic {
@@ -635,6 +634,7 @@ h4 {
     height: 100px;
     border-radius: 50%;
     margin-bottom: 10px;
+    color: #111;
 }
 
 .username {
@@ -648,6 +648,7 @@ h4 {
     font-size: 14px;
     color: #333;
 }
+
 
 .arrow {
     position: absolute;
